# pugachev-cobra

./: .editorconfig  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  remotion.config.ts  render-garden.ps1  render-isle-of-man.ps1  render-lbya.sh  render-mbende.ps1  render-wheels-boxes.ps1  render-wheels.ps1  tsconfig.json
.claude/: settings.local.json
assets/ballast-control/: balast-squence.md
assets/be-the-one-we-need/: CLIPS.md
assets/garden/: garden-sequence.md
assets/isle-of-man/: isle-of-man.md
assets/leave-before-you-arrive/: CLIPS.md  effects-code.md  gibbon-concat.txt  sequence.md
assets/mbende/: documentary.md
assets/resiliant-wheels/: wheels-sequence.md
docs/economics/: economic-agent-theory.tex  foundations-of-price.tex
docs/neuroscience/: neuropartitioning-calculus.tex  semantic-categorical-aperture.tex
docs/notes/: 00-foundations.md  01-dsl-prior-art-sbs.md  02-dsl-prior-art-scope.md  03-economics-foundations.md  04-neuroscience-foundations.md  05-computing-foundations.md  README.md  (+1 more)
extension/: background.js  content.js  drift-content.js  make_icons.py  manifest.json  popup.css  popup.html  popup.js
prepass/: __init__.py  beats.py  config.py  detect.py  detect_generic.py  layers.py  requirements.txt  run.py  run_vibrio.py  schema.py  shadow.py  speed.py  track.py  vibrio_full.py  video.py
remotion/: Root.tsx  tsconfig.json
renders/: garden-filter.txt  mbende-filter.txt  test_filter.txt
web/: .env.local.example  Effects.md  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+171 files in other folders)
