[project]
name = "pugachev-cobra-validation"
version = "0.1.0"
description = "Numerical validation suite for the advertising coordinate theory paper"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["e*.py"]
python_functions = ["run"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]
